--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,14 +1,12 @@
 .header {
   max-width: 880px;
   min-height: 74px;
-    margin: 40px auto 45px;
-  border-bottom: 1px solid rgba(84, 84, 84, .5)
-
+  margin: 40px auto 45px;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.5);
 }
 @media screen and (max-width: 320px) {
   .header {
     width: 100%;
     margin: 28px auto 42px;
-    
   }
 }
