--- a/pages/index.css
+++ b/pages/index.css
@@ -5,7 +5,7 @@
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/main/main.css);
-
+@import url(../blocks/list/list.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__title/profile__title.css);
 @import url(../blocks/profile/description/profile__description.css);
@@ -23,14 +23,10 @@
 @import url(../blocks/profile/__picture/profile__picture.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/popup/popup.css);
-
 @import url(../blocks/popup/__close/popup__close.css);
-
-
 @import url(../blocks/popup/_type_edit/popup_type_edit.css);
 @import url(../blocks/popup/__header/popup__header.css);
 @import url(../blocks/popup/__fieldset/popup__fieldset.css);
-
 @import url(../blocks/popup/__save/popup__save.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__form/popup__form.css);
