--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,11 +1,13 @@
 .popup{
     display: none;
-    justify-content: center;
     margin: auto;
     position: fixed;
     left: 0;
     right: 0;
-    top: 195px;
-    padding: 0;
+    top: 0;
+    bottom: 0;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0,0,0,0.5);
 
 }
