--- a/blocks/profile/__picture/profile__picture.css
+++ b/blocks/profile/__picture/profile__picture.css
@@ -4,8 +4,9 @@
     border-radius: 50%;
     margin-right: 30px;
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 650px) {
     .profile__picture  {
         margin-right: 0;
+        margin-bottom: 22.25px;
     }
   }
