--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,13 +1,12 @@
-.popup{
-    display: none;
-    margin: auto;
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(0,0,0,0.5);
-
+.popup {
+  display: none;
+  margin: auto;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
 }
