--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -1,15 +1,14 @@
-.profile__add{
-    width: 150px;
-height: 50px;
-border: 2px solid #FFFFFF;
-/* box-sizing: border-box; почекать*/
-border-radius: 2px;
-background-image: url('../../../image/button_add.svg');
-background-repeat: no-repeat;
-
+.profile__add {
+  width: 150px;
+  height: 50px;
+  border: 2px solid #ffffff;
+  box-sizing: border-box;
+  border-radius: 2px;
+  background-image: url("../../../image/button_add.svg");
+  background-repeat: no-repeat;
 }
 @media screen and (max-width: 320px) {
-    .profile__add  {
-        width: 282px;
-    }
+  .profile__add {
+    width: 282px;
   }
+}
