--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -9,5 +9,7 @@
 @media screen and (max-width: 650px) {
   .profile__description {
     margin: 14px 0 36px 0;
+    font-size: 14px;
+    line-height: 17px;
   }
 }
