--- a/blocks/button/_type/button_type_close.css
+++ b/blocks/button/_type/button_type_close.css
@@ -1,4 +1,4 @@
-.popup__close {
+.button_type_close{
   width: 32px;
   height: 32px;
   border: none;
@@ -10,7 +10,7 @@
   right: -40px;
 }
 @media screen and (max-width: 420px) {
-  .popup__close {
+  .button_type_close {
     width: 20px;
     height: 20px;
     right: 0;
