--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,3 +6,10 @@
   color: #545454;
   margin-bottom: 60px;
 }
+@media screen and (max-width: 320px) {
+  .footer {
+    font-size: 14px;
+    line-height: 17px;
+    margin: 0 19px 36px;
+  }
+}
