--- a/pages/index.css
+++ b/pages/index.css
@@ -17,6 +17,8 @@
 @import url(../blocks/cards/__title/cards__title.css);
 @import url(../blocks/cards/__box/cards__box.css);
 @import url(../blocks/cards/__like/cards__like.css);
+@import url(../blocks/cards/__like/_active/cards__like_active.css);
+@import url(../blocks/cards/__trash/cards__trash.css);
 @import url(../blocks/profile/__add/profile__add.css);
 @import url(../blocks/profile/__picture/profile__picture.css);
 @import url(../blocks/footer/footer.css);
