--- a/blocks/popup/__edit/popup__edit.css
+++ b/blocks/popup/__edit/popup__edit.css
@@ -1,4 +1,6 @@
-.popup__edit {
+/* удалить нахер */
+
+/* .popup__edit {
   display: flex;
   max-width: 430px;
   width: 100%;
@@ -12,4 +14,4 @@
   .popup__edit {
     max-width: 282px;
   }
-}
+} */
