--- a/pages/index.css
+++ b/pages/index.css
@@ -24,9 +24,13 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__edit/popup__edit.css);
+@import url(../blocks/popup/__add-place/popup__add-place.css);
 @import url(../blocks/popup/__header/popup__header.css);
+@import url(../blocks/popup/_container/popup_container.css);
 @import url(../blocks/popup/__fieldset/popup__fieldset.css);
 @import url(../blocks/popup/__save/popup__save.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__img/popup__img.css);
+@import url(../blocks/popup/__description/popup__description.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
