--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,4 +1,4 @@
-.popup_container{
+.popup__container{
     display: flex;
     max-width: 430px;
     width: 100%;
@@ -9,7 +9,7 @@
     position: relative;
   }
   @media screen and (max-width: 600px) {
-    .popup_container {
+    .popup__container {
       max-width: 282px;
     }
   }
