--- a/pages/index.css
+++ b/pages/index.css
@@ -27,7 +27,10 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__fieldset/popup__fieldset.css);
 @import url(../blocks/popup/__save/popup__save.css);
+@import url(../blocks/popup/__save/_type/popup__save_type_error.css);
 @import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(../blocks/popup/__error/popup__error_visible.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__img/popup__img.css);
 @import url(../blocks/popup/__description/popup__description.css);
