--- a/blocks/popup/__input/_type/popup__input_type_error.css
+++ b/blocks/popup/__input/_type/popup__input_type_error.css
@@ -1,9 +1,3 @@
-.popup__input_type_error{
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 15px;
-    color: #FF0000;
-    margin-top: 5px;
-   
+.popup__input_type_error {
+  border-bottom: 1px solid #ff0000;
 }
-
