--- a/src/blocks/profile/__picture/profile__picture.css
+++ b/src/blocks/profile/__picture/profile__picture.css
@@ -3,6 +3,7 @@
   height: 120px;
   border-radius: 50%;
   margin-right: 30px;
+  z-index: -1;
 }
 @media screen and (max-width: 650px) {
   .profile__picture {
