--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -5,6 +5,7 @@
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/list/list.css);
+@import url(../blocks/profile/__edit-picture/profile__edit-picture.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__title/profile__title.css);
 @import url(../blocks/profile/__description/profile__description.css);
@@ -16,8 +17,10 @@
 @import url(../blocks/cards/__img/cards__img.css);
 @import url(../blocks/cards/__title/cards__title.css);
 @import url(../blocks/cards/__box/cards__box.css);
+@import url(../blocks/cards/__box-like/cards__box-like.css);
 @import url(../blocks/cards/__like/cards__like.css);
 @import url(../blocks/cards/__like/_active/cards__like_active.css);
+@import url(../blocks/cards/__like-count/cards__like-count.css);
 @import url(../blocks/cards/__trash/cards__trash.css);
 @import url(../blocks/profile/__add/profile__add.css);
 @import url(../blocks/profile/__picture/profile__picture.css);
