--- a/src/blocks/profile/__picture/profile__picture.css
+++ b/src/blocks/profile/__picture/profile__picture.css
@@ -3,8 +3,11 @@
   height: 120px;
   border-radius: 50%;
   margin-right: 30px;
-  z-index: -1;
+  object-fit: cover;
+  z-index: -2;
+  position: relative;
 }
+
 @media screen and (max-width: 650px) {
   .profile__picture {
     margin-right: 0;
