--- a/src/blocks/popup/__form/popup__form.css
+++ b/src/blocks/popup/__form/popup__form.css
@@ -1,6 +1,7 @@
 .popup__form {
   max-width: 358px;
   margin-top: 34px;
+  width: 100%;
 }
 @media screen and (max-width: 600px) {
   .popup__form {
